# learning_python

Python_Modules/Python_Module_00/ex0/: ft_hello_garden.py
Python_Modules/Python_Module_00/ex1/: ft_plot_area.py
Python_Modules/Python_Module_00/ex2/: ft_harvest_total.py
Python_Modules/Python_Module_00/ex3/: ft_plant_age.py
Python_Modules/Python_Module_00/ex4/: ft_water_reminder.py
Python_Modules/Python_Module_00/ex5/: ft_count_harvest_iterative.py  ft_count_harvest_recursive.py  ft_count_iterative.py  ft_count_recursive.py
Python_Modules/Python_Module_00/ex6/: ft_garden_summary.py
Python_Modules/Python_Module_00/ex7/: ft_seed_inventory.py
Python_Modules/Python_Module_01/ex0/: ft_garden_intro.py
Python_Modules/Python_Module_01/ex1/: ft_garden_data.py
Python_Modules/Python_Module_01/ex2/: ft_plant_growth.py
Python_Modules/Python_Module_01/ex3/: ft_plant_factory.py
Python_Modules/Python_Module_01/ex4/: ft_garden_security.py
Python_Modules/Python_Module_01/ex5/: ft_plant_types.py
Python_Modules/Python_Module_01/ex6/: ft_garden_analytics.py
Python_Modules/Python_Module_04/: sample_data.json
Python_Modules/Python_Module_06/: ft_circular_curse.py  ft_import_transmutation.py  ft_pathway_debate.py  ft_sacred_scroll.py
Python_Modules/Python_Module_07/: battle.py  capacitor.py  tournament.py
Python_Modules/Python_Module_08/ex1/: loading.py  pyproject.toml  requirements.txt  test.py
Python_Modules/Python_Module_10/: data_generator.py
beginner/: even_only.py  len_str.py  reverse_str.py  sum.py  sum_list.py
(+46 files in other folders)
